NT/ds/security/cryptoapi/pkitrust/tests/signing/bad/tscert.doc
version https://git-lfs.github.com/spec/v1
oid sha256:a0851a4064c762f25c7ba8db5afe02bf0b83c8260765b70ce001ceceaf0d8ca6
size 55296
